# nix-ast

./: .gitignore  CHANGELOG.md  README.md  flake.nix  lib.nix  nix-ast.cabal
.github/: release-please-config.json  renovate.json
.github/workflows/: cachix.yml  ci.yml  docs.yml  release-please.yml
app/: Command.hs  Exec.hs  Main.hs  Parser.hs
app/NixAST/: CLI.hs  Command.hs  Exec.hs  Input.hs  Parser.hs  Run.hs
docs/: book.toml
docs/src/: SUMMARY.md  cli.md
docs/src/api/: README.md  core-functions.md  match.md  syntax.md  traversal.md
docs/src/ast/: README.md  attr-path.md  operators.md  param-set.md  var-name.md
docs/src/ast/antiquoted/: README.md  antiquoted.md  escaped-newline.md  plain.md
docs/src/ast/atom/: README.md  bool.md  float.md  int.md  null.md  uri.md
docs/src/ast/binding/: README.md  inherit.md  named-var.md
docs/src/ast/expr/: README.md  abs.md  app.md  assert.md  binary.md  constant.md  env-path.md  has-attr.md  if.md  let.md  list.md  literal-path.md  select.md  set.md  str.md  sym.md  syn-hole.md  unary.md  with.md
docs/src/ast/key-name/: README.md  dynamic-key.md  static-key.md
docs/src/ast/params/: README.md  param-set.md  param.md
docs/src/ast/string/: README.md  double-quoted.md  indented.md
lib/ast/: analysis.nix  core.nix  pass.nix  syntax.nix
nix/: test.nix  tests.nix
nix/lib/: default.nix  helpers.nix  match.nix  syntax.nix  traversal.nix  types.nix
nix/lib/traversal/: default.nix  utils.nix
src/: NixAST.hs
src/NixAST/: Convert.hs  Eval.hs  Input.hs  Types.hs
test/: Spec.hs
tests/: ast.nix
