cabal-version:   3.8
name:            nix-ast

-- x-release-please-start-version
version:         0.3.1
-- x-release-please-end

license:         BSD-3-Clause
license-file:    LICENSE
author:          zion
maintainer:      ox7a696f6e@outlook.com
extra-doc-files: CHANGELOG.md

common shared
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:        -j4 -Wall -Wcompat
  build-depends:
    , base        >=4.12
    , bytestring  >=0.11
    , text        >=2.0

common dep
  build-depends:
    , aeson     >=2.0
    , data-fix  >=0.3
    , hnix      >=0.17

library
  import:          shared
  import:          dep
  exposed-modules:
    NixAST
    NixAST.Convert
    NixAST.Types

  hs-source-dirs:  src
  build-depends:
    , megaparsec     >=9.5
    , prettyprinter  >=1.7

executable nix-ast
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  NixAST.CLI
  build-depends:
    , nix-ast
    , optparse-applicative  >=0.18

test-suite tests
  import:         shared
  import:         dep
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , nix-ast
    , QuickCheck        >=2.14
    , tasty             >=1.4
    , tasty-hunit       >=0.10
    , tasty-quickcheck  >=0.10
